--- a/FileExplorer/Controls/PreviewControl.xaml
+++ b/FileExplorer/Controls/PreviewControl.xaml
@@ -1,13 +1,21 @@
-﻿<Grid x:Class="FileExplorer.Controls.PreviewControl"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-      xmlns:common="clr-namespace:FileExplorer.Core"
-      xmlns:controls="clr-namespace:FileExplorer.Controls">
+﻿<ContentControl x:Class="FileExplorer.Controls.PreviewControl"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+                xmlns:common="clr-namespace:FileExplorer.Core"
+                xmlns:controls="clr-namespace:FileExplorer.Controls"
+                Content="{Binding ActiveExtension, RelativeSource={RelativeSource Self}}">
 
-    <TextBlock FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap"
-               Text="{Binding NoPreviewAvailable, Source={StaticResource ResourceProvider}}"
-               Visibility="{Binding ActiveExtension, RelativeSource={RelativeSource AncestorType=controls:PreviewControl}, Converter={common:ObjectToVisibilityConverter Inverse=True}}" />
-    <dx:WaitIndicator DeferedVisibility="{Binding Loading, Mode=OneWay, RelativeSource={RelativeSource AncestorType=controls:PreviewControl}}" />
+    <ContentControl.Template>
+        <ControlTemplate TargetType="ContentControl">
+            <Grid>
+                <TextBlock FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap"
+                           Text="{Binding NoPreviewAvailable, Source={StaticResource ResourceProvider}}"
+                           Visibility="{Binding ActiveExtension, RelativeSource={RelativeSource AncestorType=controls:PreviewControl}, Converter={common:ObjectToVisibilityConverter Inverse=True}}" />
+                <dx:WaitIndicator DeferedVisibility="{Binding Loading, Mode=OneWay, RelativeSource={RelativeSource AncestorType=controls:PreviewControl}}" />
+                <ContentPresenter />
+            </Grid>
+        </ControlTemplate>
+    </ContentControl.Template>
 
-</Grid>
+</ContentControl>
